# charts

./: Dockerfile  LICENSE  README.md  docker-compose.yml  example.env  pyproject.toml
app/: data.py  main.py  model.py
app/static/: index.html  main.js
