[tool.poetry]
name = "Charts"
version = "0.1.0"
description = "App for charting various data."
authors = ["Neil MacMillan"]
readme = "README.md"

[tool.poetry.dependencies]
fastapi = "~=0.109"
google-api-python-client = "~=2.116"
google-auth-httplib2 = "~=0.2"
google-auth-oauthlib = "~=1.2"
uvicorn = "~=0.27"
python = ">=3.12,<3.13"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
pyright = "*"
types-cachetools = "*"

[build-system]
requires = ["poetry-core"]

[tool.black]
target-version = ["py312"]
line-length = 120
