[tool.poetry]
name = "Charts"
version = "0.1.0"
description = "App for charting various data."
authors = ["Neil MacMillan"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
fastapi = "~0.121.0"
google-api-python-client = "~2.179.0"
google-auth-httplib2 = "~0.2.1"
google-auth-oauthlib = "~1.2.3"
uvicorn = "~0.38.0"
python = ">=3.13,<3.14"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
flake8 = "7.3.0"
flake8-pyproject = "1.2.3"
pyright = "1.1.404"
types-cachetools = "6.1.0.20250717"
pytest = "8.4.1"
pytest-coverage = "0.0"

[build-system]
requires = ["poetry-core"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.flake8]
max-line-length = 100
